# enhanced-fine-tuning

./: .gitignore  pyproject.toml  run.sh
experiments/: run_experiment.py  run_freematch.py  utils.py
src/data/: __init__.py  freematch_utils.py  utils.py
src/grouping/: updater.py
src/grouping/cifar10--dinov3/: get_embedding.py  get_grouping.py
src/models/: __init__.py  dinov3_classifier.py
src/training/: __init__.py  loss.py  trainer.py
