[project]
name = "thesis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faiss-cpu>=1.12.0",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "mlflow>=3.6.0",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "rich>=14.2.0",
    "scipy>=1.15.3",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "tqdm>=4.67.1",
    "transformers==4.56.1",
]
